# cavepaint.net

./: .gitignore  README.md  Readme.md  app.py  calibrate.py  calibrate_angles.py  calibrate_toein.py  calibration.json  cam_server.py  collect.py  download_models.py  gesture_meta.json  gesture_model.pth  hand_tracking.py  hand_tracking_class.py  hello.py  mongo_whiteboard.py  motor_control4.py  pose_train.py  preview.py  pyproject.toml  rotate_degrees.py  session_store.py  stereo_drawing.py  stereo_preview.py  stroke.py  swipe_collect.py  swipe_detect.py  swipe_meta.json  swipe_model.pth  swipe_train.py  track_draw.py  train.py  triangulate.py  webstreaming.py
dataset/session_20260328_160901/: landmarks.csv
dataset/session_20260328_201631/: landmarks.csv
dataset/session_20260329_071117/: landmarks.csv
dataset/session_20260329_102036/: landmarks.csv
dataset/session_20260330_141539/: landmarks.csv
pose_dataset/session_20260329_053206/: landmarks.csv
stereo_drawing/: __init__.py  __main__.py  camera.py  constants.py  gesture.py  landmarker.py  mongo.py  state_slot.py  tracker.py
swipe_dataset/session_20260328_204529/: sequences.csv
templates/: gallery.html  index.html  replay.html  stream.html  student.html
