[project]
name = "cavepaint-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "mediapipe>=0.10.33",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pymongo>=4.16.0",
    "pyserial>=3.5",
]
